src/css/3-screens/1-xxs.css
/**********************************************************************************
 * NEGATIVE XXS sized screen - Feature phone
 **********************************************************************************/
@media screen and (max-width: 18.1em) and (orientation: portrait),
screen and (max-width: 20.1em) and (orientation: landscape) {
	.header-container {
		height: 56px;
	}

/*============== Buttons ==============*/
	.header-button {
		height: 56px;
		margin: 0 4px;
		width: 48px;
	}

	.button-scroll-to-top {display: none;}

/*============== Logo ==============*/
	.header-container .logo {
		border-bottom: 1px solid;
		border-radius: 0 0 28px 0;
		height: 55px;
		width: 55px;
	}

/*============== Playlist ==============*/
	.menu-playlist {
		height: 100px;
	}

/*============== Pages ==============*/
	.content {padding: 10px;}
	.content article {text-align: left;}

	.content-discography .album-cover {margin-top: 16px;}
	.content-discography .album-cover .fas {font-size: 150px;}
	.content-discography .album-tracks .track-length {margin-left: 4px;}

	.content-tune .tune-links li {margin: 5px 0;}

	.content-version .ascii-logo {
		font-size: 0.35rem;
		margin: 0;
	}
	.content-version .version-info-table td {width: 50%;}
}

